<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">KKLauncher</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
       <!--headbar  -->
    <string name="headbar_live">电视直播</string>
    <string name="headbar_HD">互动高清</string>
    <string name="headbar_lookback">精彩回看</string>
    <string name="headbar_application">应用</string>
     <string name="otherapp_textview">其他应用列表</string>
    
    <string name="main_tip_text">新疆油田有线电视网络公司</string>
    
    <string name="text_button1_2">CCTV-1 高清\n</string>
    <string name="text_button1_3">CCTV-3 高清\n</string>
    <string name="text_button1_4">CCTV-5 高清\n</string>
    <string name="text_button1_5">CCTV-6 高清\n</string>
    <string name="text_button1_6">CCTV-9 高清\n</string>
    <string name="text_button1_7">北京 高清\n</string>
    <string name="text_button1_8">浙江 高清\n</string>
    <string name="text_button1_9">江苏 高清\n</string>
    <string name="text_button1_10">湖南 高清\n</string>
    
    <string name="contentDescription_4">4</string>
    <string name="contentDescription_1">1</string>
    
    <!-- 应用button文字 -->
    <string name="button4_1">股  票</string>
    <string name="button4_2">邮  件</string>
    <string name="button4_3">网络设置</string>
    <string name="button4_4">直播设置</string>
    <string name="button4_5">媒 体 库</string>
    <string name="button4_6">显示设置</string>
    <string name="button4_7">视频设置</string>
    <string name="button4_8">敬请期待</string>
    <string name="button4_9">敬请期待</string>
    <string name="button4_10">敬请期待</string>
    <string name="button4_11">敬请期待</string>
    <string name="button4_12">更多</string>
    
    
	<!-- 应用 -->
	<string name="app_operation">应用管理</string>
	<string name="app_operation_summary">当前操作对象为  <xliff:g id="type">%1$s</xliff:g></string>
	
	<string name="app_operation_common">设为常用</string>
	<string name="app_operation_common_summary">可在常用应用栏快速启动此应用</string>
	<string name="app_operation_common_done">已设为常用应用</string>
	<string name="app_operation_common_full">常用栏已满</string>
	
	<string name="app_operation_common_cancel">取消常用</string>
	<string name="app_operation_common_cancel_summary">不再在常用应用栏显示此应用</string>
	<string name="app_operation_common_cancel_done">已取消常用</string>
	
	<string name="app_operation_boot_start">设为开机启动</string>
	<string name="app_operation_boot_start_summary">开机后自动启动此应用</string>
	<string name="app_operation_boot_start_done">已设为开机启动</string>
	<string name="app_operation_boot_start_done1">已设为开机启动  <xliff:g id="type">%1$s</xliff:g> 已不再是开机启动应用</string>
	
	<string name="app_operation_boot_start_cancel">取消开机启动</string>
	<string name="app_operation_boot_start_cancel_summary">开机后不再自动启动此应用</string>
	<string name="app_operation_boot_start_cancel_done">已取消开机启动</string>
	
	<string name="app_operation_uninstall">卸载</string>
	
	
	<string name="app_add_title">添加常用应用</string>
	<string name="app_add_summary">选择要添加到首页的应用</string>
	
	<string name="app_common_operation">常用应用位管理</string>
	<string name="app_common_operation_replace">替换为别的应用</string>
	<string name="app_common_operation_replace_summary">替换别的应用到此常用栏</string>
	
	<string name="tips0">按</string>
	<string name="tips1">编辑此常用应用</string>
	
	<!-- 设置 -->
	<string name="setting_network">网络设置</string>
	<string name="setting_display">图像与声音</string>
	<string name="setting_account">账号</string>
	<string name="setting_about">通用与设置</string>
	
	<!-- 消息 -->
	<string name="message">消息</string>
	<string name="clean_all_message">清空所有消息</string>
	<string name="empty_message">消息为空</string>
	
	<!-- 期待 -->
	<string name="expect">敬请期待，后续上线</string>
	
		<!--For CA notify Type define -->
	<string name="st_ca_message_cancel_type">取消当前的显</string>
	<string name="st_ca_message_badcard_type">无法识别卡</string>
	<string name="st_ca_message_expicard_type">智能卡过期，请更换新</string>
	<string name="st_ca_message_insertcard_type">加扰节目，请插入智能卡</string>
	<string name="st_ca_message_nooper_type">卡中不存在节目运营商</string>
	<string name="st_ca_message_blackout_type">条件禁播</string>
	<string name="st_ca_message_outworktime_type">当前时段被设定为不能观看</string>
	<string name="st_ca_message_watchlevel_type">节目级别高于设定的观看级别</string>
	<string name="st_ca_message_pairing_type">智能卡与本机顶盒不对应</string>
	<string name="st_ca_message_noentitle_type">没有授权</string>
	<string name="st_ca_message_decryptfail_type">节目解密失败</string>
	<string name="st_ca_message_nomoney_type">卡内金额不足</string>
	<string name="st_ca_message_errregion_type">区域不正确</string>
	<string name="st_ca_message_needfeed_type">子卡需要和母卡对应，请插入母卡</string>
	<string name="st_ca_message_errcard_type">智能卡校验失败，请联系运营商</string>
	<string name="st_ca_message_update_type">智能卡升级中，请不要拔卡或者关机</string>
	<string name="st_ca_message_lowcardver_type">请升级智能卡</string>
	<string name="st_ca_message_viewlock_type">请勿频繁切换频道</string>
	<string name="st_ca_message_maxrestart_type">智能卡暂时休眠，5分钟后重新开机</string>
	<string name="st_ca_message_freeze_type">智能卡已冻结，请联系运营商</string>
	<string name="st_ca_message_callback_type">智能卡已暂停，请回传收视记录给运营商</string>
	<string name="st_ca_message_curtain_type">窗帘节目，不可预览阶段</string>
	<string name="st_ca_message_cardteststart_type">升级测试卡测试中...</string>
	<string name="st_ca_message_cardtestfaild_type">升级测试卡测试失败，请检查机卡通讯模块</string>
	<string name="st_ca_message_cardtestsucc_type">升级测试卡测试成功</string>
	<string name="st_ca_message_nocaliboper_type">卡中不存在移植库定制运营商</string>
	<string name="st_ca_message_stblocked_type">请重启机顶盒</string>
	<string name="st_ca_message_stbfreeze_type">机顶盒被冻结</string>
	<string name="top_no_singal">信号中断</string>
	<string name="top_no_prog">节目列表为空,请搜索</string>
	
</resources>
